# SmartEye

./: .gitignore  README.md  SMARTEYE.code-workspace  requirements.txt  test.py
.streamlit/: config.toml
scripts/: create_venv.sh
src/: .gitignore  Dockerfile  Makefile  config.py  docker-compose.yml  main.py  pyproject.toml  test.py
src/alembic/: env.py
src/alembic/versions/: f0775b25ecf1_create_tables_photos_and_cards.py
src/database/: config.py  pgadd.py  pgconfig.py
src/db/: __init__.py  base.py  metadata.py  models.py  repositories.py  session.py
src/pages/: del_photo.py  delete_photo.py  photo.py  stream.py  stream_camera.py  stream_video.py  upload_photo.py
src/utils/: encoder.py  hash.py  pages_switch.py
test/: output.csv  test.py
theme/: custom_theme.toml
